--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ td {
 
 
 .cover {
-  background-image: url("C:/Users/ljcan_000/Desktop/Website Project/photos/open road.jpg");
+  background-image: url("photos/open road (2).jpg");
   background-size: cover;
   background-position: center;
   height: 400px;
@@ -85,7 +85,7 @@ td {
 }
 
 #banner {
-  background-image: url("C:/Users/ljcan_000/Desktop/Website Project/photos/open road (2).jpg");
+  background-image: url("photos/open road (2).jpg"");
   background-size: cover;
   background-position: center;
   height: 700px;
