--- a/style.css
+++ b/style.css
@@ -1,9 +1,6 @@
 body {
-  
-  
   padding: 15px;
   font-family: sans-serif;
-
 }
 
 h1 {
@@ -12,167 +9,568 @@ h1 {
   font-size: 60px;
 }
 
-
-
 h2 {
   color: black;
   font-family: cursive;
 }
 
-a {
-  color: black;
+/*font family 
+font-family: 'Edu TAS Beginner', cursive;
+font-family: 'Kanit', sans-serif;
+font-family: 'Roboto', sans-serif;
+*/
+
+footer {
+  background-color:rgb(114, 189, 250);
+  font-family: 'Roboto', sans-serif;
+  position: sticky;
+  margin-top: 100px;
+  height: 250px;
+  width: 100%;
+  display: inline-flex;
+  justify-content: space-around;
+  align-items: baseline;
+  /*grid-template-columns: 1fr 1fr;
+  grid-gap: 10px; */ 
+  text-align: center;
 }
 
-table.center{
-  margin-left: auto;
-  margin-right: auto;
-}
-
-img:hover {
-
-}
-td {
-  color: black;
-  font-family: monospace;
+footer h5 {
   font-size: 20px;
-
+  color: rgb(50, 50, 50);
 }
 
-.aligncenter {
-  text-align: center;
-}
-
-.alignleft {
-  text-align: left;
-}
-
-.alignright {
-  text-align: right;
-}
-
-#Introduction {
-  text-align: center;
-}
-
-
-.cover {
-  background-image: url("photos/open road (2).jpg");
-  background-size: cover;
-  background-position: center;
-  height: 400px;
-  box-sizing: border-box;
-  
-}
-
-/* html{
-  background-image: url("C:/Users/ljcan_000/Desktop/Website Project/photos/open road.jpg");
-  background-size: cover;
-  background-position: center;
-  height: 120%;
-  background-repeat: space;
-} */
-
-.lineheight {
-  line-height: 9em;
-}
-
-.grid-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 20px; 
-  margin-top: 50px;
-  width: 100%;
-}
-
-#banner {
-  background-image: url("photos/open road (2).jpg"");
-  background-size: cover;
-  background-position: center;
-  height: 700px;
-  width: 100%;
-  opacity: 0.95;
-  position: relative;
-  top: 50px;
-}
-
-#banner .content h1{
-  text-align: center;
-  position: relative;
-  top: 50px;
-  margin: 0 auto;
-  height: 100px;
-  width: 900px;
-  border: 2px solid black;
-  border-radius: 50px;
-  padding: 20px;
-}
-
-.intro {
+footer h6 {
+  font-size: 15px;
   color: black;
-  font-family: monospace;
-  font-size: 25px;
-  text-align: justify-all;
-  border: 2px solid black;
-  height: 400px;
-  width: 100%;
-  border-collapse: 50px;
-  padding: 2px 20px 20px 50px;
-  margin: 20px 20px 50px 2px;
-  box-sizing: border-box;
-  
-  z-index: 2;
 }
 
-.LetsGo {
-  border: 2px solid ;
-  height: 400px;
+
+.picture {
+  display: relative;
+  margin: 50px auto;
   width: 100%;
-  text-align: center;
-  padding: 20px 50px 20px 20px;
-  margin: 20px 20px 50px 2px;
-  box-sizing: border-box;
-  
-  z-index: 2;
 }
+
+/* navigation */
 
 nav{
-  background-color: rgb(69, 194, 236);
-  position: absolute;
-  top: 10px;
+  position: relative;
   z-index: 2;
-  height: 50px;
-  width: 96%;
-  border: 2px solid black;
-  margin: 0 auto;
+  height: 70px;
+  width: 99%;
+  text-align: center;
+  top: 20px;
 }
 
 nav li{
-  background-color: white;
-  font-family: monospace;
-  font-size: 20px;
-  color: skyblue;
+  color: white;
+  font-family: 'Edu TAS Beginner', cursive;
+  font-size: 50px;
   display: inline-block;
-  width: 32%;
+  width: 300px;
   text-align: center;
-  border: 2px solid black;
+  border: 1px solid black;
+  border-radius: 15px;
+}
+
+a {
+  color: rgb(54, 52, 52);
+  text-decoration: underline;
+
+}
+
+a:hover, nav li:hover {
+  color: rgb(114, 189, 250);
+  text-decoration: none;
+}
+
+/* content banner for blog entries*/
+#postbanner {
+  /* background-image: url("C:/Users/ljcan_000/Desktop/Website Project/photos/open road (2).jpg"); */
+  background-image: url('C:/Users/ljamc/OneDrive/Desktop/Website Project/photos/Mt. Cook-Queenstown/glacier.jpg');
+  background-size: cover;
+  background-position: center;
+  height: 900px;
+  width: 90%;
+  left: 5%;
+  position: relative; 
+  z-index: 1;
+}
+
+#postbanner .content h1{
+  font-family: 'Kanit', sans-serif;
+  font-size: 95px;
+  text-align: center;
+  position: relative;
+  margin: 50px auto 20px auto;
+  height: 120px;
+  color: white;
+  padding: 150px 150px 150px 150px;
+  border: 2px solid white;
+  border-radius: 20px;
+  width: 70%;
+  z-index: 2;
+}
+
+.newtagline h2{
+  font-family: 'Roboto', sans-serif;
+  font-size: 60px;
+  color: white;
+  text-align: center;
+  margin: 0 auto;
+  position: relative;
+  z-index: 1;
+}
+/* banner */
+
+#banner {
+  height: 700px;
+  width: 95%;
+  position: relative; 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 200px;
+  left: 2%;
+}
+
+#banner .content h1{
+  font-family: 'Kanit', sans-serif;
+  font-size: 130px;
+  text-align: center;
+  position: relative;
+  margin: 35px auto;
+  height: 150px;
+  color: white;
+  padding: 150px 10px;
+  border: 2px solid white;
+  border-radius: 20px;
+  width: 90%;
+  z-index: 1;
+}
+
+.tagline h2{
+  font-family: 'Roboto', sans-serif;
+  font-size: 60px;
+  color: white;
+  text-align: center;
+  margin: 0 auto;
+  position: relative;
+  z-index: 1;
+  top: 50px;
+}
+
+.content {
+  position: relative;
   margin: 0 auto;
 }
 
-.qtown {
-  background-image: url("C:/Users/ljcan_000/Desktop/Website Project/photos/queenstown2.jpg");
+
+.carousel-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); 
+  text-align: center;
+  z-index: 50;
+  padding: 20px;
+  width: 95%;
+  margin: 0 auto;
+}
+
+
+.slideshow {
+  height: 100%;
+  overflow: hidden; /* to hide slides in x-direction */
+  position: relative;
+  
+}
+/* wrapper which wraps all the slideshow images stylings */
+.slideshow-wrapper {
+  display: flex;
+  /* We give it width as 400% because we are making a 
+     4 image carousel. If you want to make for example, 
+     5 images carousel, then give width as 500%. */
+  width: 400%;
+  height: 100%;
+  position: relative;
+  /* you can change the animation settings from below */
+  animation: slideshow 20s infinite;
+  
+}
+
+.slide {
+  width: 100%;
+  height: 100%;
+}
+.slide-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; 
+}
+/* @keyframes are used to provide animations
+ We make these settings for 4 image carousel.
+ Make modification according to your needs. */
+@keyframes slideshow {
+  0%  { left: 0; }
+  10% { left: 0; }
+  15% { left: -100%; }
+  25% { left: -100%; }
+  30% { left: -200%; }
+  40% { left: -200%; }
+  45% { left: -300%; }
+  55% { left: -300%; }
+  60% { left: -200%; }
+  70% { left: -200%; }
+  75% { left: -100%; }
+  85% { left: -100%; }
+  90% { left: 0%; }
+}
+
+.slide-btn {
+  background-color: #bbb;
+  border-radius: 50%;
+  border: .2rem solid #d38800;
+  width: 1.2rem;
+  height: 1.2rem;
+  outline: none;
+  cursor: pointer;
+            /* stylings for positioning the buttons at
+               the bottom of the carousel */
+  position: absolute;
+  bottom: 3%;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 70;
+}
+           /* As we provide position as absolute, 
+           the buttons places one over the other. 
+           So, we have to place them individually
+           at their correct positions. */
+.slide-btn-1 {
+  left: 43%;
+}
+.slide-btn-2 {
+  left: 48%;
+}
+
+.slide-btn-3 {
+  left: 53%;
+}
+.slide-btn-4 {
+  left: 58%;
+}
+           /* When we focus on the particular button, 
+           the animation stops to that particular image 
+           to which the button is associated. */
+.slide-btn-1:focus~.slideshow-wrapper {
+  animation: none;
+  left: 0;
+}
+.slide-btn-2:focus~.slideshow-wrapper {
+  animation: none;
+  left: -100%;
+}
+.slide-btn-3:focus~.slideshow-wrapper {
+  animation: none;
+  left: -200%;
+}
+.slide-btn-4:focus~.slideshow-wrapper {
+  animation: none;
+  left: -300%;
+}
+           /* when we focus on the button, the background color changes */
+.slide-btn:focus {
+background-color: rgb(114, 189, 250);
+}
+
+/* blog content design */
+
+.blogheader {
+  border-bottom: 2px solid rgb(114, 189, 250);
+  
+}
+
+.blogheader h1{
+  text-align: center;
+}
+
+/* explore */
+.explore {
+  /* background-color: rgba(11, 149, 241, 0.5); */
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+  height: 700px;
+  margin: 20px auto 50px auto;
+  position: relative;
+  top: 200px;
+  left: 10%;
+}
+
+.introexplore {
+  width: 100%;
+  min-width: auto;
+}
+
+.introexplore h2 {
+  font-family: 'Edu TAS Beginner', cursive;
+  font-size: 80px;
+  font-weight: 600;
+  color: black;
+  padding: 50px;
+  border-left: 5px solid rgb(114, 189, 250);
+  
+}
+
+.tekapo {
+  background-image: url('C:/Users/ljamc/OneDrive/Desktop/Website Project/photos/Mt. Cook-Queenstown/lake tekapo.jpg');
+  background-size: cover;
+  background-position: center; 
+  height: 500px;
+  width: 100%;
+  position: relative;
+  border-radius: 50px;
+  border: 1px solid black;
+}
+
+.tekapo h2 {
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  color: black;
+  opacity: 1;
+}
+
+
+
+
+
+/* Trip sections */
+
+#tripheader {
+  text-align: center;
+  font-weight: 600;
+  font-size: 70px;
+  word-spacing: 2px;
+  position: relative;
+  border-bottom: 5px solid rgb(114, 189, 250);
+  font-family: 'Kanit', sans-serif;
+  top: 200px;
+}
+
+#tripname {
+  color: white;
+  font-weight: 600;
+  font-size: 50px;
+  font-family: 'Kanit', sans-serif;
+  text-align: center;
+  padding: 50px 20px 400px 20px;
+  margin: 0 auto;
+  text-decoration: underline;
+  
+}
+
+#tripname:hover {
+  color:white;
+  font-size: 55px;
+  text-decoration: none;
+}
+
+
+.tripline {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  width: 100%;
+  grid-gap: 20px; 
+  position: relative;
+  margin-bottom: 50px;
+  margin-top: 250px;
+}
+
+.tripline2 {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  width: 100%;
+  grid-gap: 20px; 
+  position: relative;
+  
+}
+
+
+.qtown2 {
+  background-image: url("photos/queenstown2.jpg");
   background-size: cover;
   background-position: center;
   height: 500px;
-  width: 50%;
-  opacity: 0.95;
+  width: 100%;  
+  border: 1px solid black;
 }
 
-#Queenstown {
-  color: white;
-  font-size: 50px;
-  text-align: center;
-  padding: 300px 20px 140px 20px;
-  border: 2px solid black;
+.qtown2:hover {
+  cursor: pointer;
+  background-image: url("photos/milbrook.jpg");
+  background-size: cover;
+  background-position: center;
+  height: 500px;
+  width: 100%; 
+  border: 1px solid black;
+  transition: background-image .5s ease-in-out;  
+}
+
+.westcoast {
+  background-image: url("photos/hokitika.jpg");
+  background-size: cover;
+  background-position: center;
+  height: 500px;
+  width: 100%;
+  border: 1px solid black;
+}
+
+.westcoast:hover {
   
+  cursor: pointer;
+  background-image: url("photos/boardwalk.jpg");
+  background-size: cover;
+  background-position: center;
+  height: 500px;
+  width: 100%; 
+  border: 1px solid black;
+  transition: background-image .5s ease-in-out;  
+}
+
+.tongariro {
+  background-image: url("photos/Tongariro2.jpg");
+  background-size: cover;
+  background-position: center;
+  height: 500px;
+  width: 100%;
+  border: 1px solid black;
+}
+
+.tongariro:hover {
+  cursor: pointer;
+  background-image: url("photos/Tongariro.jpg");
+  background-size: cover;
+  background-position: top;
+  height: 500px;
+  width: 100%; 
+  border: 1px solid black;
+  transition: background-image .5s ease-in-out;  
+}
+
+.blenheim {
+  background-image: url("photos/Winery.jpg");
+  background-size: cover;
+  background-position: center;
+  height: 500px;
+  width: 100%;
+  border: 1px solid black;
+}
+
+.blenheim:hover {
+  cursor: pointer;
+  background-image: url("photos/half.jpg");
+  background-size: cover;
+  background-position: center;
+  height: 500px;
+  width: 100%; 
+  border: 1px solid black;
+  transition: background-image .5s ease-in-out;  
+}
+
+
+.castlepoint {
+  background-image: url("photos/castlepoint.jpg");
+  background-size: cover;
+  background-position: left;
+  height: 500px;
+  width: 100%;
+  border: 1px solid black;
+}
+
+.castlepoint:hover {
+  cursor: pointer;
+  background-image: url("photos/Ica Valley.jpg");
+  background-size: cover;
+  background-position: center;
+  height: 500px;
+  width: 100%; 
+  border: 1px solid black;
+  transition: background-image .5s ease-in-out;  
+}
+
+
+.capepalliser {
+  background-image: url("photos/capepalliser.jpg");
+  background-size: cover;
+  background-position: center;
+  height: 500px;
+  width: 100%;
+  border: 1px solid black;
+}
+
+.capepalliser:hover {
+  cursor: pointer;
+  background-image: url("photos/open road (2).jpg");
+  background-size: cover;
+  background-position: center;
+  height: 500px;
+  width: 100%; 
+  border: 1px solid black;
+  transition: background-image .5s ease-in-out;  
+}
+
+
+
+/* About Me */
+.intro {
+  color: black;
+  font-family: monospace;
+  text-align: justify-all;
+  height: 400px;
+  width: 100%;
+  border-collapse: 50px;
+  padding: 2px 20px 20px 10px;
+  margin: 20px 20px 50px 2px;
+  box-sizing: border-box;
+  z-index: 2;
+  border-top: 5px solid rgb(114, 189, 250);
+}
+
+.intro p {
+  font-family: 'Edu TAS Beginner', cursive;
+  font-weight: 500;
+  font-size: 40px;
+}
+
+.LetsGo {
+  height: 550px;
+  width: 100%;
+  text-align: center;
+  padding: 20px 50px 50px 20px;
+  margin: 20px 20px 70px 2px;
+  box-sizing: border-box;
+  z-index: 2;
+  border-bottom: 5px solid rgb(114, 189, 250);
+}
+
+.LetsGo h2{
+  font-family: 'Edu TAS Beginner', cursive;
+  font-weight: 700;
+  font-size: 55px;
+}
+
+#aboutme {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px; 
+  width: 80%;
+  position: relative;
+  margin: 50px auto;
   
 }
+
+
+
