--- a/style.css
+++ b/style.css
@@ -327,7 +327,7 @@ background-color: rgb(114, 189, 250);
 }
 
 .tekapo {
-  background-image: url('C:/Users/ljamc/OneDrive/Desktop/Website Project/photos/Mt. Cook-Queenstown/lake tekapo.jpg');
+  background-image: url('photos/Mt. Cook-Queenstown/lake tekapo.jpg');
   background-size: cover;
   background-position: center; 
   height: 500px;
