--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 body {
-  padding: 15px;
   font-family: sans-serif;
 }
 
@@ -24,8 +23,8 @@ footer {
   background-color:rgb(114, 189, 250);
   font-family: 'Roboto', sans-serif;
   position: sticky;
-  margin-top: 100px;
-  height: 250px;
+  margin-top: 5 0px;
+  height: 200px;
   width: 100%;
   display: inline-flex;
   justify-content: space-around;
@@ -36,12 +35,12 @@ footer {
 }
 
 footer h5 {
-  font-size: 20px;
+  font-size: 15px;
   color: rgb(50, 50, 50);
 }
 
 footer h6 {
-  font-size: 15px;
+  font-size: 10px;
   color: black;
 }
 
@@ -56,17 +55,16 @@ footer h6 {
 
 nav{
   position: relative;
-  z-index: 2;
-  height: 70px;
-  width: 99%;
-  text-align: center;
-  top: 20px;
+  height: 50px;
+  width: 100%;
+  bottom: 100px;
+  
 }
 
 nav li{
   color: white;
   font-family: 'Edu TAS Beginner', cursive;
-  font-size: 50px;
+  font-size: 30px;
   display: inline-block;
   width: 300px;
   text-align: center;
@@ -132,34 +130,34 @@ a:hover, nav li:hover {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-bottom: 200px;
   left: 2%;
 }
 
 #banner .content h1{
   font-family: 'Kanit', sans-serif;
-  font-size: 130px;
+  font-size: 80px;
   text-align: center;
   position: relative;
-  margin: 35px auto;
+  margin: 35px auto 0px auto;
   height: 150px;
   color: white;
-  padding: 150px 10px;
+  padding: 80px 30px 70px 30px;
   border: 2px solid white;
   border-radius: 20px;
   width: 90%;
   z-index: 1;
+  bottom: 30px;
 }
 
 .tagline h2{
   font-family: 'Roboto', sans-serif;
-  font-size: 60px;
+  font-size: 50px;
   color: white;
   text-align: center;
   margin: 0 auto;
   position: relative;
   z-index: 1;
-  top: 50px;
+  bottom: 20px;
 }
 
 .content {
@@ -290,7 +288,7 @@ background-color: rgb(114, 189, 250);
 
 .blogheader {
   border-bottom: 2px solid rgb(114, 189, 250);
-  
+
 }
 
 .blogheader h1{
@@ -304,10 +302,9 @@ background-color: rgb(114, 189, 250);
   justify-content: center;
   align-items: center;
   width: 80%;
-  height: 700px;
-  margin: 20px auto 50px auto;
+  height: 500px;
+  margin: 5px auto 20px auto;
   position: relative;
-  top: 200px;
   left: 10%;
 }
 
@@ -318,7 +315,7 @@ background-color: rgb(114, 189, 250);
 
 .introexplore h2 {
   font-family: 'Edu TAS Beginner', cursive;
-  font-size: 80px;
+  font-size: 50px;
   font-weight: 600;
   color: black;
   padding: 50px;
@@ -330,17 +327,11 @@ background-color: rgb(114, 189, 250);
   background-image: url('photos/Mt. Cook-Queenstown/lake tekapo.jpg');
   background-size: cover;
   background-position: center; 
-  height: 500px;
+  height: 250px;
   width: 100%;
   position: relative;
   border-radius: 50px;
   border: 1px solid black;
-}
-
-.tekapo h2 {
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  color: black;
-  opacity: 1;
 }
 
 
@@ -357,7 +348,6 @@ background-color: rgb(114, 189, 250);
   position: relative;
   border-bottom: 5px solid rgb(114, 189, 250);
   font-family: 'Kanit', sans-serif;
-  top: 200px;
 }
 
 #tripname {
@@ -386,7 +376,6 @@ background-color: rgb(114, 189, 250);
   grid-gap: 20px; 
   position: relative;
   margin-bottom: 50px;
-  margin-top: 250px;
 }
 
 .tripline2 {
@@ -525,35 +514,44 @@ background-color: rgb(114, 189, 250);
 
 
 /* About Me */
+
+#aboutme {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  height: 500px;
+  width: 90%;
+  position: relative;
+  margin: 50px auto;
+  left: 5%;
+}
+
 .intro {
   color: black;
-  font-family: monospace;
   text-align: justify-all;
-  height: 400px;
   width: 100%;
-  border-collapse: 50px;
+  height: 400px;
+  /*
   padding: 2px 20px 20px 10px;
-  margin: 20px 20px 50px 2px;
-  box-sizing: border-box;
-  z-index: 2;
+  margin: 10px 20px 50px 2px;  */
   border-top: 5px solid rgb(114, 189, 250);
 }
 
 .intro p {
   font-family: 'Edu TAS Beginner', cursive;
   font-weight: 500;
-  font-size: 40px;
+  font-size: 25px;
+  flex-shrink: 1;
 }
 
 .LetsGo {
-  height: 550px;
   width: 100%;
   text-align: center;
+  /*
   padding: 20px 50px 50px 20px;
-  margin: 20px 20px 70px 2px;
-  box-sizing: border-box;
-  z-index: 2;
-  border-bottom: 5px solid rgb(114, 189, 250);
+  margin: 20px 20px 70px 2px; */ 
+  border-bottom: 5px solid rgb(114, 189, 250); 
+
 }
 
 .LetsGo h2{
@@ -561,16 +559,5 @@ background-color: rgb(114, 189, 250);
   font-weight: 700;
   font-size: 55px;
 }
-
-#aboutme {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 20px; 
-  width: 80%;
-  position: relative;
-  margin: 50px auto;
-  
-}
-
 
 
