--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+  font-size: 16px;
+}
+
 body {
   font-family: sans-serif;
 }
@@ -5,7 +9,7 @@ body {
 h1 {
   color: black;
   font-family: cursive;
-  font-size: 60px;
+  font-size: 3.75rem;
 }
 
 h2 {
@@ -23,24 +27,22 @@ footer {
   background-color:rgb(114, 189, 250);
   font-family: 'Roboto', sans-serif;
   position: sticky;
-  margin-top: 5 0px;
+  margin-top: 50px;
   height: 200px;
   width: 100%;
   display: inline-flex;
   justify-content: space-around;
   align-items: baseline;
-  /*grid-template-columns: 1fr 1fr;
-  grid-gap: 10px; */ 
   text-align: center;
 }
 
 footer h5 {
-  font-size: 15px;
+  font-size: 1rem;
   color: rgb(50, 50, 50);
 }
 
 footer h6 {
-  font-size: 10px;
+  font-size: 0.625rem;
   color: black;
 }
 
@@ -55,16 +57,15 @@ footer h6 {
 
 nav{
   position: relative;
-  height: 50px;
+  height: 100%;
   width: 100%;
   bottom: 100px;
-  
 }
 
 nav li{
   color: white;
   font-family: 'Edu TAS Beginner', cursive;
-  font-size: 30px;
+  font-size: 1.6rem;
   display: inline-block;
   width: 300px;
   text-align: center;
@@ -75,7 +76,6 @@ nav li{
 a {
   color: rgb(54, 52, 52);
   text-decoration: underline;
-
 }
 
 a:hover, nav li:hover {
@@ -83,9 +83,9 @@ a:hover, nav li:hover {
   text-decoration: none;
 }
 
-/* content banner for blog entries*/
+/* content banner for blog entries
 #postbanner {
-  /* background-image: url("C:/Users/ljcan_000/Desktop/Website Project/photos/open road (2).jpg"); */
+  /* background-image: url("C:/Users/ljcan_000/Desktop/Website Project/photos/open road (2).jpg"); 
   background-image: url('C:/Users/ljamc/OneDrive/Desktop/Website Project/photos/Mt. Cook-Queenstown/glacier.jpg');
   background-size: cover;
   background-position: center;
@@ -95,7 +95,6 @@ a:hover, nav li:hover {
   position: relative; 
   z-index: 1;
 }
-
 #postbanner .content h1{
   font-family: 'Kanit', sans-serif;
   font-size: 95px;
@@ -119,7 +118,8 @@ a:hover, nav li:hover {
   margin: 0 auto;
   position: relative;
   z-index: 1;
-}
+} 
+*/
 /* banner */
 
 #banner {
@@ -130,28 +130,27 @@ a:hover, nav li:hover {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  left: 2%;
+  left: 2.5%;
 }
 
 #banner .content h1{
   font-family: 'Kanit', sans-serif;
-  font-size: 80px;
+  font-size: 5rem;
   text-align: center;
   position: relative;
-  margin: 35px auto 0px auto;
-  height: 150px;
+  margin: 1% auto 5% auto;
+  height: 21%;
+  width: 90%;
   color: white;
-  padding: 80px 30px 70px 30px;
+  padding: 7% 3% 7% 3%;
   border: 2px solid white;
   border-radius: 20px;
-  width: 90%;
   z-index: 1;
-  bottom: 30px;
 }
 
 .tagline h2{
   font-family: 'Roboto', sans-serif;
-  font-size: 50px;
+  font-size: 3.125rem;
   color: white;
   text-align: center;
   margin: 0 auto;
@@ -301,11 +300,12 @@ background-color: rgb(114, 189, 250);
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  width: 80%;
+  flex-wrap: wrap;
+  width: 70%;
   height: 500px;
-  margin: 5px auto 20px auto;
+  margin: 1% auto 4% auto;
   position: relative;
-  left: 10%;
+  left: 15%;
 }
 
 .introexplore {
@@ -315,19 +315,20 @@ background-color: rgb(114, 189, 250);
 
 .introexplore h2 {
   font-family: 'Edu TAS Beginner', cursive;
-  font-size: 50px;
+  font-size: 3.125rem;
   font-weight: 600;
   color: black;
-  padding: 50px;
+  padding: 5%;
   border-left: 5px solid rgb(114, 189, 250);
-  
+  border-top: 5px solid rgb(114, 189, 250);
+
 }
 
 .tekapo {
   background-image: url('photos/Mt. Cook-Queenstown/lake tekapo.jpg');
   background-size: cover;
   background-position: center; 
-  height: 250px;
+  height: 50%;
   width: 100%;
   position: relative;
   border-radius: 50px;
@@ -340,10 +341,38 @@ background-color: rgb(114, 189, 250);
 
 /* Trip sections */
 
+/* container */
+.tripline {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 90%;
+  height: 100%; 
+  position: relative;
+  margin-bottom: 20px;
+  left: 5%;
+  border: 2px solid #d38800;
+}
+
+/* container */
+.tripline2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 90%;
+  height: 100%; 
+  position: relative;
+  margin-bottom: 50px;
+  left: 5%;
+  border: 2px solid #d38800;
+}
+
 #tripheader {
   text-align: center;
   font-weight: 600;
-  font-size: 70px;
+  font-size: 4.375rem;
   word-spacing: 2px;
   position: relative;
   border-bottom: 5px solid rgb(114, 189, 250);
@@ -353,38 +382,19 @@ background-color: rgb(114, 189, 250);
 #tripname {
   color: white;
   font-weight: 600;
-  font-size: 50px;
+  font-size: 2.5rem;
   font-family: 'Kanit', sans-serif;
   text-align: center;
-  padding: 50px 20px 400px 20px;
+  padding: 60px 20px 300px 20px;
   margin: 0 auto;
   text-decoration: underline;
-  
+  border:2px solid green;
 }
 
 #tripname:hover {
   color:white;
-  font-size: 55px;
+  font-size: 2.7rem;
   text-decoration: none;
-}
-
-
-.tripline {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  width: 100%;
-  grid-gap: 20px; 
-  position: relative;
-  margin-bottom: 50px;
-}
-
-.tripline2 {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  width: 100%;
-  grid-gap: 20px; 
-  position: relative;
-  
 }
 
 
@@ -392,9 +402,11 @@ background-color: rgb(114, 189, 250);
   background-image: url("photos/queenstown2.jpg");
   background-size: cover;
   background-position: center;
-  height: 500px;
-  width: 100%;  
+  height: 80%;
+  width: 325px;  
   border: 1px solid black;
+  margin: 20px 30px;
+  flex-grow: 1;
 }
 
 .qtown2:hover {
@@ -402,30 +414,37 @@ background-color: rgb(114, 189, 250);
   background-image: url("photos/milbrook.jpg");
   background-size: cover;
   background-position: center;
-  height: 500px;
-  width: 100%; 
+  height: 80%;
+  width: 325px;  
+  border: 1px solid black;
+  margin: 20px 30px;
+  flex-grow: 1;
   border: 1px solid black;
   transition: background-image .5s ease-in-out;  
-}
+} 
 
 .westcoast {
   background-image: url("photos/hokitika.jpg");
   background-size: cover;
   background-position: center;
-  height: 500px;
-  width: 100%;
+  height: 80%;
+  width: 325px;
   border: 1px solid black;
+  margin: 20px auto;
+  flex-grow: 1;
 }
 
+
 .westcoast:hover {
-  
   cursor: pointer;
   background-image: url("photos/boardwalk.jpg");
   background-size: cover;
   background-position: center;
-  height: 500px;
-  width: 100%; 
+  height: 80%;
+  width: 325px;  
   border: 1px solid black;
+  margin: 20px auto;
+  flex-grow: 1;
   transition: background-image .5s ease-in-out;  
 }
 
@@ -433,9 +452,11 @@ background-color: rgb(114, 189, 250);
   background-image: url("photos/Tongariro2.jpg");
   background-size: cover;
   background-position: center;
-  height: 500px;
-  width: 100%;
+  height: 80%;
+  width: 325px;
   border: 1px solid black;
+  margin: 20px auto;
+  flex-grow: 1;
 }
 
 .tongariro:hover {
@@ -443,9 +464,11 @@ background-color: rgb(114, 189, 250);
   background-image: url("photos/Tongariro.jpg");
   background-size: cover;
   background-position: top;
-  height: 500px;
-  width: 100%; 
+  height: 80%;
+  width: 325px;  
   border: 1px solid black;
+  margin: 20px auto;
+  flex-grow: 1;
   transition: background-image .5s ease-in-out;  
 }
 
@@ -453,9 +476,11 @@ background-color: rgb(114, 189, 250);
   background-image: url("photos/Winery.jpg");
   background-size: cover;
   background-position: center;
-  height: 500px;
-  width: 100%;
+  height: 80%;
+  width: 325px;  
   border: 1px solid black;
+  margin: 20px 30px;
+  flex-grow: 1;
 }
 
 .blenheim:hover {
@@ -463,9 +488,11 @@ background-color: rgb(114, 189, 250);
   background-image: url("photos/half.jpg");
   background-size: cover;
   background-position: center;
-  height: 500px;
-  width: 100%; 
+  height: 80%;
+  width: 325px;  
   border: 1px solid black;
+  margin: 20px 30px;
+  flex-grow: 1;
   transition: background-image .5s ease-in-out;  
 }
 
@@ -474,9 +501,11 @@ background-color: rgb(114, 189, 250);
   background-image: url("photos/castlepoint.jpg");
   background-size: cover;
   background-position: left;
-  height: 500px;
-  width: 100%;
+  height: 80%;
+  width: 325px;  
   border: 1px solid black;
+  margin: 20px auto;
+  flex-grow: 1;
 }
 
 .castlepoint:hover {
@@ -484,20 +513,23 @@ background-color: rgb(114, 189, 250);
   background-image: url("photos/Ica Valley.jpg");
   background-size: cover;
   background-position: center;
-  height: 500px;
-  width: 100%; 
+  height: 80%;
+  width: 325px;  
   border: 1px solid black;
+  margin: 20px auto;
+  flex-grow: 1;
   transition: background-image .5s ease-in-out;  
 }
-
 
 .capepalliser {
   background-image: url("photos/capepalliser.jpg");
   background-size: cover;
   background-position: center;
-  height: 500px;
-  width: 100%;
+  height: 80%;
+  width: 325px;  
   border: 1px solid black;
+  margin: 20px auto;
+  flex-grow: 1;
 }
 
 .capepalliser:hover {
@@ -505,9 +537,11 @@ background-color: rgb(114, 189, 250);
   background-image: url("photos/open road (2).jpg");
   background-size: cover;
   background-position: center;
-  height: 500px;
-  width: 100%; 
+  height: 80%;
+  width: 325px;  
   border: 1px solid black;
+  margin: 20px auto;
+  flex-grow: 1;
   transition: background-image .5s ease-in-out;  
 }
 
@@ -560,4 +594,41 @@ background-color: rgb(114, 189, 250);
   font-size: 55px;
 }
 
+@media only screen and (min-width: 320px) and (max-width: 600px) {
+  
+  nav{
+    position: relative;
+    height: 100%;
+    width: 80%;
+    bottom: 30px;
+    left: 10%;
+  }
+  
+  nav li{
+    font-size: 1rem;
+    display: inline-block;
+    width: 90px;
+  }
 
+  #banner {
+    height: 250px;
+  }
+  
+  #banner .content h1{
+    font-size: 1.9rem;
+    height: 50%;
+    padding: 5% 1% 5% 1%
+  }
+
+  .tagline h2{
+    font-size: 0.9rem;
+    bottom: 20px;
+  }
+  #tripheader { 
+    font-size: 2rem;
+  }
+
+  .introexplore h2 {
+    font-size: 1.3rem;
+  }
+}
