--- a/style.css
+++ b/style.css
@@ -57,9 +57,14 @@ footer h6 {
 
 nav{
   position: relative;
-  height: 100%;
+  height: 15%;
   width: 100%;
-  bottom: 100px;
+  display: inline-flex;
+  justify-items: center;
+  align-items: center;
+  justify-content: center ;
+  margin: 0 auto;
+  bottom: 70px;
 }
 
 nav li{
@@ -67,7 +72,7 @@ nav li{
   font-family: 'Edu TAS Beginner', cursive;
   font-size: 1.6rem;
   display: inline-block;
-  width: 300px;
+  width: 12em;
   text-align: center;
   border: 1px solid black;
   border-radius: 15px;
@@ -79,58 +84,22 @@ a {
 }
 
 a:hover, nav li:hover {
-  color: rgb(114, 189, 250);
+  color: white;
   text-decoration: none;
 }
 
-/* content banner for blog entries
-#postbanner {
-  /* background-image: url("C:/Users/ljcan_000/Desktop/Website Project/photos/open road (2).jpg"); 
-  background-image: url('C:/Users/ljamc/OneDrive/Desktop/Website Project/photos/Mt. Cook-Queenstown/glacier.jpg');
-  background-size: cover;
-  background-position: center;
-  height: 900px;
-  width: 90%;
-  left: 5%;
-  position: relative; 
-  z-index: 1;
-}
-#postbanner .content h1{
-  font-family: 'Kanit', sans-serif;
-  font-size: 95px;
-  text-align: center;
-  position: relative;
-  margin: 50px auto 20px auto;
-  height: 120px;
-  color: white;
-  padding: 150px 150px 150px 150px;
-  border: 2px solid white;
-  border-radius: 20px;
-  width: 70%;
-  z-index: 2;
-}
 
-.newtagline h2{
-  font-family: 'Roboto', sans-serif;
-  font-size: 60px;
-  color: white;
-  text-align: center;
-  margin: 0 auto;
-  position: relative;
-  z-index: 1;
-} 
-*/
-/* banner */
 
 #banner {
   height: 700px;
-  width: 95%;
+  width: 100%;
   position: relative; 
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  left: 2.5%;
+  
+  
 }
 
 #banner .content h1{
@@ -171,10 +140,10 @@ a:hover, nav li:hover {
   left: 50%;
   transform: translate(-50%, -50%); 
   text-align: center;
-  z-index: 50;
-  padding: 20px;
-  width: 95%;
+  z-index: 50;  
+  width: 100%;
   margin: 0 auto;
+
 }
 
 
@@ -283,16 +252,7 @@ a:hover, nav li:hover {
 background-color: rgb(114, 189, 250);
 }
 
-/* blog content design */
 
-.blogheader {
-  border-bottom: 2px solid rgb(114, 189, 250);
-
-}
-
-.blogheader h1{
-  text-align: center;
-}
 
 /* explore */
 .explore {
@@ -325,7 +285,7 @@ background-color: rgb(114, 189, 250);
 }
 
 .tekapo {
-  background-image: url('photos/Mt. Cook-Queenstown/lake tekapo.jpg');
+  background-image: url('Mt. Cook/lake tekapo.jpg');
   background-size: cover;
   background-position: center; 
   height: 50%;
@@ -352,8 +312,8 @@ background-color: rgb(114, 189, 250);
   position: relative;
   margin-bottom: 20px;
   left: 5%;
-  border: 2px solid #d38800;
 }
+
 
 /* container */
 .tripline2 {
@@ -364,15 +324,14 @@ background-color: rgb(114, 189, 250);
   width: 90%;
   height: 100%; 
   position: relative;
-  margin-bottom: 50px;
+  margin-bottom: 10px;
   left: 5%;
-  border: 2px solid #d38800;
 }
 
 #tripheader {
   text-align: center;
   font-weight: 600;
-  font-size: 4.375rem;
+  font-size: 3.5rem;
   word-spacing: 2px;
   position: relative;
   border-bottom: 5px solid rgb(114, 189, 250);
@@ -382,115 +341,137 @@ background-color: rgb(114, 189, 250);
 #tripname {
   color: white;
   font-weight: 600;
-  font-size: 2.5rem;
+  font-size: 2.3rem;
   font-family: 'Kanit', sans-serif;
   text-align: center;
-  padding: 60px 20px 300px 20px;
-  margin: 0 auto;
+  padding: 10px 10px 50px 10px;
+  margin: 0 auto; 
   text-decoration: underline;
-  border:2px solid green;
-}
+  border:2px solid rgb(8, 8, 8);
+  border-radius: 20px;
+  
+} 
 
 #tripname:hover {
-  color:white;
-  font-size: 2.7rem;
+  color: white;
+  font-weight: 600;
+  font-size: 2.4rem;
+  font-family: 'Kanit', sans-serif;
+  text-align: center;
+  padding: 10px 10px 50px 10px;
+  margin: 0 auto; 
   text-decoration: none;
+  border:2px solid rgb(8, 8, 8);
+  border-radius: 20px;
 }
 
+#tripname h3 {
+  background-color: rgba(145, 145, 145, 0.5);
+  margin-top: 10%;
+  margin-bottom: 50%;
+  border-radius: 20px;
+}
+
+#tripname h6 {
+  font-size: 1rem;
+  background-color: rgba(9, 9, 9, 0.5);
+  margin-top: 70%;
+  border-radius: 20px;
+  padding: 1px;
+  text-align: center;
+  
+}
 
 .qtown2 {
-  background-image: url("photos/queenstown2.jpg");
+  background-image: url("Queenstown/queenstown2.jpg");
   background-size: cover;
   background-position: center;
   height: 80%;
   width: 325px;  
-  border: 1px solid black;
   margin: 20px 30px;
   flex-grow: 1;
+  border-radius: 20px;
 }
 
 .qtown2:hover {
   cursor: pointer;
-  background-image: url("photos/milbrook.jpg");
+  background-image: url("Queenstown/milbrook.jpg");
   background-size: cover;
   background-position: center;
   height: 80%;
   width: 325px;  
-  border: 1px solid black;
   margin: 20px 30px;
-  flex-grow: 1;
-  border: 1px solid black;
+  flex-grow: 1;  
   transition: background-image .5s ease-in-out;  
 } 
 
 .westcoast {
-  background-image: url("photos/hokitika.jpg");
+  background-image: url("West Coast/hokitika.jpg");
   background-size: cover;
   background-position: center;
   height: 80%;
   width: 325px;
-  border: 1px solid black;
   margin: 20px auto;
   flex-grow: 1;
+  border-radius: 20px;
 }
 
 
 .westcoast:hover {
   cursor: pointer;
-  background-image: url("photos/boardwalk.jpg");
+  background-image: url("West Coast/boardwalk.jpg");
   background-size: cover;
   background-position: center;
   height: 80%;
   width: 325px;  
-  border: 1px solid black;
   margin: 20px auto;
   flex-grow: 1;
-  transition: background-image .5s ease-in-out;  
+  transition: background-image .5s ease-in-out;
+  color: black;
+
 }
 
 .tongariro {
-  background-image: url("photos/Tongariro2.jpg");
+  background-image: url("Tongariro/Tongariro2.jpg");
   background-size: cover;
   background-position: center;
   height: 80%;
   width: 325px;
-  border: 1px solid black;
   margin: 20px auto;
   flex-grow: 1;
+  border-radius: 20px;
 }
 
 .tongariro:hover {
   cursor: pointer;
-  background-image: url("photos/Tongariro.jpg");
+  background-image: url("Tongariro/Tongariro.jpg");
   background-size: cover;
   background-position: top;
   height: 80%;
   width: 325px;  
-  border: 1px solid black;
   margin: 20px auto;
   flex-grow: 1;
   transition: background-image .5s ease-in-out;  
 }
 
 .blenheim {
-  background-image: url("photos/Winery.jpg");
+  background-image: url("blenheim/Winery.jpg");
   background-size: cover;
   background-position: center;
   height: 80%;
   width: 325px;  
-  border: 1px solid black;
   margin: 20px 30px;
   flex-grow: 1;
+  border-radius: 20px;
 }
 
 .blenheim:hover {
   cursor: pointer;
-  background-image: url("photos/half.jpg");
+  background-image: url("blenheim/half.jpg");
   background-size: cover;
   background-position: center;
   height: 80%;
   width: 325px;  
-  border: 1px solid black;
   margin: 20px 30px;
   flex-grow: 1;
   transition: background-image .5s ease-in-out;  
@@ -498,51 +479,157 @@ background-color: rgb(114, 189, 250);
 
 
 .castlepoint {
-  background-image: url("photos/castlepoint.jpg");
+  background-image: url("Castlepoint/castlepoint.jpg");
   background-size: cover;
   background-position: left;
   height: 80%;
   width: 325px;  
-  border: 1px solid black;
   margin: 20px auto;
   flex-grow: 1;
+  border-radius: 20px;
 }
 
 .castlepoint:hover {
   cursor: pointer;
-  background-image: url("photos/Ica Valley.jpg");
+  background-image: url("Castlepoint/Ica Valley.jpg");
   background-size: cover;
   background-position: center;
   height: 80%;
   width: 325px;  
-  border: 1px solid black;
   margin: 20px auto;
   flex-grow: 1;
   transition: background-image .5s ease-in-out;  
 }
 
 .capepalliser {
-  background-image: url("photos/capepalliser.jpg");
+  background-image: url("Cape Palliser/capepalliser.jpg");
   background-size: cover;
   background-position: center;
   height: 80%;
   width: 325px;  
-  border: 1px solid black;
   margin: 20px auto;
   flex-grow: 1;
+  border-radius: 20px;
 }
 
 .capepalliser:hover {
   cursor: pointer;
-  background-image: url("photos/open road (2).jpg");
+  background-image: url("Cape Palliser/open road (2).jpg");
   background-size: cover;
   background-position: center;
   height: 80%;
   width: 325px;  
-  border: 1px solid black;
   margin: 20px auto;
   flex-grow: 1;
   transition: background-image .5s ease-in-out;  
+}
+
+
+/* grid container */
+.gridcontainer {
+  display: grid;
+  grid-template: repeat(4, 350px) / repeat(6, 1fr);
+  width: 70%;
+  height: 100%;
+  margin: 0 auto;
+  gap: 10px;
+}
+
+.gridheader h1 {
+  text-align: center;
+  font-weight: 600;
+  font-size: 3.5rem;
+  word-spacing: 2px;
+  position: relative;
+  border-bottom: 5px solid rgb(114, 189, 250);
+  font-family: 'Kanit', sans-serif;
+}
+
+.skyline {
+  background-image: url("Queenstown/sky2.jpg");
+  background-size: cover;
+  background-position: center; 
+  grid-row: 1 / span 1;
+  grid-column: 1 / span 6;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: flex-end;
+  align-content: flex-end;
+}
+
+.skylinecaption {
+  padding-left: 1%;
+  height: 25%;
+  font-size: 1.5em;
+  color: aliceblue;
+}
+
+
+.glenorchy {
+  background-image: url("Queenstown/Glenorchy Shed.jpg");
+  background-size: cover;
+  background-position: center;
+  grid-row: 2 / span 1;
+  grid-column: 5 / span 2;
+  display: flex;
+  align-items: flex-end;
+  justify-content: start;
+}
+
+.glenorchycaption {
+  padding-left: 1%;
+  height: 20%;
+  font-size: 1.5em;
+  color: aliceblue;
+} 
+
+.drive {
+  background-image: url("Queenstown/mountains.jpg");
+  background-size: cover;
+  background-position: center; 
+  grid-row: 2 / span 1;
+  grid-column: 1 / span 4;
+}
+
+.wanakatree {
+  background-image: url("Wanaka tekapo/punongwanaka2.jpg");
+  background-size: cover;
+  background-position: center; 
+  grid-row: 3 / span 1;
+  grid-column: 1 / span 2;
+}
+
+.glenorchyboard {
+  background-image: url("Queenstown/Glenorchy Board2.jpg");
+  background-size: cover;
+  background-position: center; 
+  grid-row: 3 / span 1;
+  grid-column: 3 / span 2;
+}
+
+.bino {
+  background-image: url("West Coast/bino2.jpg");
+  background-size: cover;
+  background-position: center;
+  grid-row: 3 / span 1;
+  grid-column: 5 / span 2;
+}
+
+.hobbit {
+  background-image: url("Hobbiton/Hobbiton2.jpg");
+  background-size: cover;
+  background-position: center;
+  grid-row: 4 / span 1;
+  grid-column: 3 / span 4;
+}
+
+.tongariropeak {
+  background-image: url("Tongariro/tongariro peak.jpg");
+  background-size: cover;
+  background-position: center;
+  grid-row: 4 / span 1;
+  grid-column: 1 / span 2;
 }
 
 
@@ -565,9 +652,6 @@ background-color: rgb(114, 189, 250);
   text-align: justify-all;
   width: 100%;
   height: 400px;
-  /*
-  padding: 2px 20px 20px 10px;
-  margin: 10px 20px 50px 2px;  */
   border-top: 5px solid rgb(114, 189, 250);
 }
 
@@ -581,11 +665,7 @@ background-color: rgb(114, 189, 250);
 .LetsGo {
   width: 100%;
   text-align: center;
-  /*
-  padding: 20px 50px 50px 20px;
-  margin: 20px 20px 70px 2px; */ 
   border-bottom: 5px solid rgb(114, 189, 250); 
-
 }
 
 .LetsGo h2{
@@ -594,7 +674,7 @@ background-color: rgb(114, 189, 250);
   font-size: 55px;
 }
 
-@media only screen and (min-width: 320px) and (max-width: 600px) {
+@media only screen and (min-width: 320px) and (max-width: 900px), (orientation: portrait) {
   
   nav{
     position: relative;
@@ -630,5 +710,64 @@ background-color: rgb(114, 189, 250);
 
   .introexplore h2 {
     font-size: 1.3rem;
+  }
+
+  #aboutme {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    height: 700px;
+    width: 95%;
+    margin: 50px auto;
+    left: 2.5%;
+    
+  }
+  
+  .intro {
+    width: 100%;
+    height: 200px;
+    border-top: 5px solid rgb(114, 189, 250);
+  }
+  
+  .intro p {
+    font-family: 'Edu TAS Beginner', cursive;
+    font-weight: 500;
+    font-size: 1.2rem;
+    flex-shrink: 1;
+  }
+  
+  .LetsGo {
+    width: 100%;
+    text-align: center;
+
+  }
+  
+  .LetsGo img {
+    height: 100%;
+    width: 100%;
+  }
+
+  .LetsGo h2{
+    font-family: 'Edu TAS Beginner', cursive;
+    font-weight: 700;
+    font-size: 2rem;
+  }
+
+  footer {
+    margin-top: 10px;
+    height: 200px;
+    width: 100%;
+    left: 5%;
+  }
+  
+  footer h5 {
+    font-size: 0.7rem;
+    color: rgb(50, 50, 50);
+  }
+  
+  footer h6 {
+    font-size: 0.5rem;
+    color: black;
   }
 }
